# gst-plugins-vpi

./: .gitmodules  README.md  meson.build
src/: meson.build
src/vpi/: gstvpi.c  gstvpibasetransform.c  gstvpibasetransform.h
